# mutiAgentfakeNew

./: .env.example  .gitignore  CLAUDE.md  COMPARE_WITH_FRIEND.md  EVOLUTION_V7_TO_V10.md  METHODOLOGY.md  README.md  V10_GUIDE.md  benchmark_results.json  debug_output.txt  pyproject.toml  test_llm.py  tmp_vifactcheck_20_comparison.json
.claude/: CLAUDE.md  settings.local.json
.claude/rules/: code-style.md  development-workflow.md  git-version-control.md  security.md  testing.md
benchmarks/final/: standard_benchmark_v4.json
benchmarks/history/: benchmark_final.json  benchmark_multi.json  benchmark_multi_v2.json  benchmark_multi_v3.json  benchmark_multi_v4.json  benchmark_multi_v6.json  benchmark_quick_final.json  benchmark_quick_fixed.json  benchmark_quick_v3.json  benchmark_results.json  benchmark_single.json  benchmark_v10_report.json  benchmark_v7_partial.csv  benchmark_v7_partial_report.json  benchmark_v7_samples.json  benchmark_v7_test.json  benchmark_v7_v2_report.json  benchmark_v7_v3_quick_test.json  benchmark_v8_20_report.json  benchmark_v8_final.json  benchmark_v8_fixed_report.json  (+18 more)
logs/: benchmark_v3_log.txt  benchmark_v4_log.txt  benchmark_v5_log.txt  benchmark_v6_log.txt
memory/: pydantic_dll_windows_bug.md
notebooks/: trust_agents_colab.ipynb
research/: analyze_s02.py  analyze_s08.py
scripts/: benchmark.py  benchmark_v7.py  benchmark_v8.py  compare_approaches.py  compare_benchmarks.py  debug_ddg.py  debug_pipeline.py  download_data.py  interactive_runner.py  list_nvidia_models.py  package_final_release.ps1  quick_check.ps1  smoke_test.py  test_scraper.py  train_baseline.py  update_imports.py
tests/: conftest.py
(+81 files in other folders)
